--- a/style.css
+++ b/style.css
@@ -21,12 +21,9 @@ body {
 
 .my-container {
   max-width: 100%;
-  margin: 50px 100px 30px 30px;
+  margin: 10px 2px;
   background-color: #07191d;
-  padding-left: 2rem /* 32px */;
-  padding-right: 2rem /* 32px */;
-  padding-top: 2rem /* 32px */;
-  padding-bottom: 2rem /* 32px */;
+  padding: 2rem /* 32px */;
   border-radius: 10px;
   -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
@@ -36,14 +33,17 @@ body {
 /* Tablet */
 @media (min-width: 426px) {
   .my-container {
-    margin: 20px 20px 20px 20px;
+    margin: 20px 20px;
   }
 }
 
 /* Desktop */
 @media (min-width: 769px) {
   .my-container {
-    margin: 50px 150px 150px 150px;
+    margin: 50px 50px;
+  }
+  span.my-bio {
+    font-size: 1.5rem;
   }
 }
 
