--- a/style.css
+++ b/style.css
@@ -21,10 +21,10 @@ body {
 
 .my-container {
   max-width: 100%;
-  margin: 20px 20px;
+  margin: 20px 50px;
   background-color: #07191d;
   padding: 2rem /* 32px */;
-  border-radius: 10px;
+  border-radius: 25px;
   -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
@@ -34,6 +34,7 @@ body {
 @media (min-width: 426px) {
   .my-container {
     margin: 20px 20px;
+    margin-top: 50px;
   }
 }
 
